--- a/curso-js.html
+++ b/curso-js.html
@@ -17,6 +17,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eum, quas recusandae facilis qui accusamus illum commodi corrupti neque totam cumque incidunt iure provident vero blanditiis impedit, velit tempora deleniti?</p>
         </article>
     </main>
 </body>
